8199007: ClassLoaderDataGraph::unload_list_contains() is wrong

The function isn't needed any longer.

Reviewed-by: stuefe, stefank